[package]
name = "cryonet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
async-trait = "0.1.89"
bytes = "1.11.0"
clap = { version = "4.5.54", features = ["derive", "env"] }
clap-num = "1.2.0"
dyn-clone = "1.0.20"
futures = "0.3.31"
rustrtc = "0.3.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tun-rs = { version = "2.7.8", features = ["async"] }
typetag = "0.2.21"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
