[workspace]
members = ["crates/*"]
resolver = "3"

[patch.crates-io]
web-sys = { git = "https://github.com/kagari-org/wasm-bindgen", branch = "fix-add-track" }
js-sys = { git = "https://github.com/kagari-org/wasm-bindgen", branch = "fix-add-track" }
wasm-bindgen = { git = "https://github.com/kagari-org/wasm-bindgen", branch = "fix-add-track" }
