[package]
name = "cryoc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.101", features = ["backtrace"] }
clap = { version = "4.5.57", features = ["derive"] }
clap-num = "1.2.0"
cryonet-uapi = { path = "../cryonet-uapi" }
serde_json = "1.0.149"
tempfile = "3.25.0"
tokio = { version = "1.49.0", features = ["full"] }
