[package]
name = "cryonet-lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
async-trait = "0.1.89"
bytes = "1.11.0"
cidr = "0.3.2"
dyn-clone = "1.0.20"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tracing = "0.1.44"
typetag = "0.2.21"
cryonet-uapi = { path = "../cryonet-uapi" }
sactor = "0.1.5"
reqwest = "0.13.2"
reqwest-websocket = "0.6.0"
tokio = { version = "1.49.0", features = ["rt"] }
wasmtimer = "0.4.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = "0.6.5"
uuid = { version = "1.19.0", features = ["serde", "v4", "js"] }
wasm-bindgen = "0.2.111"
wasm-bindgen-futures = "0.4.61"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-web = "0.1.3"
web-sys = { version = "0.3.87", features = [
  "RtcConfiguration",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceServer",
  "RtcPeerConnection",
  "RtcPeerConnectionIceEvent",
  "RtcPeerConnectionState",
  "RtcSdpType",
  "RtcSessionDescription",
  "RtcSessionDescriptionInit",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1.19.0", features = ["serde", "v4"] }
tun-rs = { version = "2.7.8", features = ["async"] }
rustrtc = "0.3.22"
tokio-tungstenite = "0.28.0"
async-recursion = "1.1.1"
