[package]
name = "cryonet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
async-trait = "0.1.89"
bytes = "1.11.0"
cidr = "0.3.2"
clap = { version = "4.5.54", features = ["derive", "env"] }
clap-num = "1.2.0"
dyn-clone = "1.0.20"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
typetag = "0.2.21"
cryonet-uapi = { path = "../cryonet-uapi" }
sactor = "0.1.5"
reqwest = "0.13.2"
reqwest-websocket = "0.6.0"
tokio = { version = "1.49.0", features = ["rt", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.19.0", features = ["serde", "v4", "js"] }
wasm-bindgen-futures = "0.4.61"
web-sys = { version = "0.3.87", features = [
  "MediaStream",
  "MediaStreamTrack",
  "MediaStreamTrackGenerator",
  "MediaStreamTrackGeneratorInit",
  "MediaStreamTrackProcessor",
  "MediaStreamTrackProcessorInit",
  "ReadableStream",
  "ReadableStreamDefaultReader",
  "ReadableStreamReadResult",
  "RtcConfiguration",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceServer",
  "RtcPeerConnection",
  "RtcPeerConnectionIceEvent",
  "RtcPeerConnectionState",
  "RtcRtpSender",
  "RtcSdpType",
  "RtcSessionDescription",
  "RtcSessionDescriptionInit",
  "RtcTrackEvent",
  "WritableStream",
  "WritableStreamDefaultWriter",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1.19.0", features = ["serde", "v4"] }
tun-rs = { version = "2.7.8", features = ["async"] }
axum = { version = "0.8.8", features = ["ws"] }
rustrtc = { git = "https://github.com/kagari-org/rustrtc", branch = "fix-ice-transport-runner" }
