[package]
name = "cryonet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
clap-num = "1.2.0"
cidr = "0.3.2"
sactor = "0.1.5"
tokio = { version = "1.49.0", features = ["full"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
typetag = "0.2.21"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
futures = "0.3.31"
cryonet-lib = { path = "../cryonet-lib" }
cryonet-uapi = { path = "../cryonet-uapi" }
